deploy/overlays/tst/node-vitala/components/portal-gateway/portal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: portal-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: portal.vitala.tst.dh.unimaas.nl
      tls:
        mode: Terminate
        certificateRefs:
          - name: portal-vitala-tls-secret
    - name: http
      port: 80
      protocol: HTTP
      hostname: portal.vitala.tst.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portal-route
spec:
  parentRefs:
    - name: portal-gateway
  hostnames:
    - portal.vitala.tst.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portal
          port: 3000
